# android_native_cpp_example

./: README.md  settings.gradle
.github/workflow/: android-ci.yml
app/: build.gradle
app/src/androidTest/java/com/harunkurtme/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  SerialPortJNI.cpp  native-lib.cpp  ser.cpp  ser.h
app/src/main/java/com/harunkurtme/myapplication/: MainActivity.java  SerialPort.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/harunkurtme/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
